--- a/src/main/resources/templates/html/listpage.html
+++ b/src/main/resources/templates/html/listpage.html
@@ -148,12 +148,12 @@
                     <li class="sidebar-item">
                         <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">业务造数 </span></a>
                         <ul aria-expanded="false" class="collapse  first-level">
-                            <li class="sidebar-item"><a href="/listPage?pageType=eSaler" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 电销 </span></a></li>
-                            <li class="sidebar-item"><a href="/listPage?pageType=sunflower" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu"> 直销 </span></a></li>
-                            <li class="sidebar-item"><a href="/listPage?pageType=agency" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 代理商 </span></a></li>
-                            <li class="sidebar-item"><a href="/listPage?pageType=publicService" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 公共服务 </span></a></li>
-                            <li class="sidebar-item"><a href="/listPage?pageType=finance" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 财务 </span></a></li>
-                            <li class="sidebar-item"><a href="/listPage?pageType=afterMarket" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 车主服务 </span></a></li>
+                            <li class="sidebar-item"><a href="/listPage?pageType=1" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu"> 直销 </span></a></li>
+                            <li class="sidebar-item"><a href="/listPage?pageType=2" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 代理商 </span></a></li>
+                            <li class="sidebar-item"><a href="/listPage?pageType=3" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 公共服务 </span></a></li>
+                            <li class="sidebar-item"><a href="/listPage?pageType=4" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 电销 </span></a></li>
+                            <li class="sidebar-item"><a href="/listPage?pageType=5" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 财务 </span></a></li>
+                            <li class="sidebar-item"><a href="/listPage?pageType=6" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 车主服务 </span></a></li>
                         </ul>
                     </li>
                     <!--diff工具-->
@@ -180,12 +180,11 @@
                     <li class="sidebar-item">
                         <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-move-resize-variant"></i><span class="hide-menu">Mock服务(待完成) </span></a>
                         <ul aria-expanded="false" class="collapse  first-level">
-                            <li class="sidebar-item"><a href="index2.html" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> HttpMock </span></a></li>
-                            <li class="sidebar-item"><a href="pages-gallery.html" class="sidebar-link"><i class="mdi mdi-multiplication-box"></i><span class="hide-menu"> DubboMock </span></a></li>
-                            <li class="sidebar-item"><a href="index2.html" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> KafkaMock </span></a></li>
+                            <li class="sidebar-item"><a href="/httpMock" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> HttpMock </span></a></li>
+                            <li class="sidebar-item"><a href="/dubboMock" class="sidebar-link"><i class="mdi mdi-multiplication-box"></i><span class="hide-menu"> DubboMock </span></a></li>
+                            <li class="sidebar-item"><a href="/kafkaMock" class="sidebar-link"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu"> KafkaMock </span></a></li>
                         </ul>
                     </li>
-                </ul>
                 </ul>
             </nav>
             <!-- End Sidebar navigation -->
@@ -238,7 +237,7 @@
                                     <table class="table table-hover">
                                         <thead>
                                         <tr>
-                                            <th class="text-center">#</th>
+                                            <th class="text-center">用例Id</th>
                                             <th class="text-left">用例名</th>
                                             <th>描述</th>
                                             <th class="text-right">造数执行</th>
@@ -273,12 +272,12 @@
                                                             <span aria-hidden="true">&times;</span>
                                                         </button>
                                                     </div>
-                                                    <div class="modal-body">
+                                                    <div class="modal-body" id="modalText">
                                                         用例执行中...
                                                     </div>
                                                     <div class="modal-footer">
                                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                                                        <button type="button" class="btn btn-primary">查看报告</button>
+                                                        <button type="button" class="btn btn-primary" id="modalButton" disabled>查看报告</button>
                                                     </div>
                                                 </div>
                                             </div>
