--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -145,8 +145,8 @@
                             <a class="sidebar-link has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="mdi mdi-receipt"></i><span class="hide-menu">业务造数 </span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="/listPage?pageType=1" class="sidebar-link"><i class="mdi mdi-note-outline"></i><span class="hide-menu"> 直销 </span></a></li>
-                                <li class="sidebar-item"><a href="/listPage?pageType=2" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 代理商 </span></a></li>
-                                <li class="sidebar-item"><a href="/listPage?pageType=3" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 公共服务 </span></a></li>
+                                <li class="sidebar-item"><a href="/listPage?pageType=2" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 公共服务 </span></a></li>
+                                <li class="sidebar-item"><a href="/listPage?pageType=3" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 代理商 </span></a></li>
                                 <li class="sidebar-item"><a href="/listPage?pageType=4" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 电销 </span></a></li>
                                 <li class="sidebar-item"><a href="/listPage?pageType=5" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 财务 </span></a></li>
                                 <li class="sidebar-item"><a href="/listPage?pageType=6" class="sidebar-link"><i class="mdi mdi-note-plus"></i><span class="hide-menu"> 车主服务 </span></a></li>
@@ -225,7 +225,7 @@
                 <!-- ============================================================== -->
                 <div class="row">
                     <!-- Column -->
-                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=sunflower','_self')" >
+                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=1','_self')" >
                         <div class="card card-hover">
                             <div class="box bg-cyan text-center" >
                                 <h1 class="font-light text-white" ><i class="mdi mdi-view-dashboard"></i></h1>
@@ -234,7 +234,7 @@
                         </div>
                     </div>
                     <!-- Column -->
-                    <div class="col-md-6 col-lg-4 col-xlg-3" onclick="window.open('/listPage?pageType=publicService','_self')">
+                    <div class="col-md-6 col-lg-4 col-xlg-3" onclick="window.open('/listPage?pageType=2','_self')">
                         <div class="card card-hover">
                             <div class="box bg-success text-center" href="/listPage?publicService">
                                 <h1 class="font-light text-white"><i class="mdi mdi-chart-areaspline"></i></h1>
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                      <!-- Column -->
-                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=agency','_self')">
+                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=3','_self')">
                         <div class="card card-hover">
                             <div class="box bg-warning text-center" href="/listPage?agency">
                                 <h1 class="font-light text-white"><i class="mdi mdi-collage"></i></h1>
@@ -252,7 +252,7 @@
                         </div>
                     </div>
                     <!-- Column -->
-                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=eSaler','_self')">
+                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=4','_self')">
                         <div class="card card-hover">
                             <div class="box bg-danger text-center" href="/listPage?eSaler">
                                 <h1 class="font-light text-white"><i class="mdi mdi-border-outside"></i></h1>
@@ -261,7 +261,7 @@
                         </div>
                     </div>
                     <!-- Column -->
-                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=finance','_self')">
+                    <div class="col-md-6 col-lg-2 col-xlg-3" onclick="window.open('/listPage?pageType=5','_self')">
                         <div class="card card-hover">
                             <div class="box bg-info text-center" href="/listPage?finance">
                                 <h1 class="font-light text-white"><i class="mdi mdi-arrow-all"></i></h1>
@@ -271,7 +271,7 @@
                     </div>
                     <!-- Column -->
                     <!-- Column -->
-                    <div class="col-md-6 col-lg-4 col-xlg-3" onclick="window.open('/listPage?pageType=afterMarket','_self')">
+                    <div class="col-md-6 col-lg-4 col-xlg-3" onclick="window.open('/listPage?pageType=6','_self')">
                         <div class="card card-hover">
                             <div class="box bg-danger text-center" href="/listPage?afterMarket">
                                 <h1 class="font-light text-white"><i class="mdi mdi-receipt"></i></h1>
