--- a/src/main/resources/templates/html/listpage.html
+++ b/src/main/resources/templates/html/listpage.html
@@ -284,7 +284,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                                        <button type="button" class="btn btn-primary" id="modalButton">查看报告</button>
+                                        <a class="btn btn-primary" id="modalButton">查看报告</a>
                                     </div>
                                 </div>
                             </div>
@@ -374,7 +374,7 @@
             var runButton = $("<button  class=\"btn btn-success\" data-toggle=\"modal\" data-target=\"#Modal2\" >Run</button>");
             runButton.attr("onclick","runCase(\'"+item.runUrl+"\')");
             var td15 = $("<td></td>").addClass("text-right");
-            var saveButton = $("<button type=\"submit\" class=\"btn btn-primary\">Save</button>");
+            var saveButton = $("<button type=\"button\" class=\"btn btn-primary\">Save</button>");
             td14.append(runButton);
             td15.append(saveButton);
             tr1.append(td11);
@@ -435,10 +435,8 @@
             success: function(result) {
                 $("#modalText").empty().append("用例执行完成");
                 console.log(result.content);
-                $("#modalButton").attr("onclick",jumpReport());
-                function jumpReport() {
-                    window.location.href=result.content;
-                }
+                $("#modalButton").attr("href",result.content);
+
             }
         });
 
