--- a/src/main/resources/templates/html/listpage.html
+++ b/src/main/resources/templates/html/listpage.html
@@ -81,7 +81,7 @@
                             <span class="d-block d-md-none"><i class="fa fa-plus"></i></span>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">新增造数case</a>
+                            <a class="dropdown-item" href="/caseAdmin">新增造数case</a>
                             <a class="dropdown-item" href="#">新增接口</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a>
@@ -435,7 +435,10 @@
             success: function(result) {
                 $("#modalText").empty().append("用例执行完成");
                 console.log(result.content);
-                $("#modalButton").attr("href",result.content);
+                var report_path = result.content;
+                report_path = report_path.split("/templates")[1];
+                report_path="http://localhost:5000/reports"+report_path;
+                $("#modalButton").attr("href",report_path);
 
             }
         });
