--- a/src/main/resources/templates/html/caseAdmin.html
+++ b/src/main/resources/templates/html/caseAdmin.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/images/favicon.png">
-    <title>造数list</title>
+    <title>用例管理</title>
     <!-- Custom CSS -->
     <link href="/static/dist/css/style.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -230,7 +230,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="card card-body printableArea">
-                        <h3> <span class="pull-right">[[${systemName}]]</span></h3>
+                        <h3> <span class="pull-right">用例管理</span></h3>
                         <!--caseTable-->
                         <div class="row">
                             <div class="col-md-12">
@@ -275,18 +275,54 @@
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">请确认！</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">新增用例</h5>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
-                                    <div class="modal-body" id="modalText">
-                                        是否删除该用例
+                                    <form>
+                                    <div class="modal-body" id="modalBody-addCase">
+                                        <!--case提交栏-->
+                                        <div class="card-body">
+                                            <div class="form-group row">
+                                                <label class="col-sm-3 text-right control-label col-form-label">系统名称</label>
+                                                <div class="col-md-9">
+                                                    <select class="select2 form-control custom-select" id="system_type" style="width: 100%; height:36px;">
+                                                        <option value=1>直销</option>
+                                                        <option value=2>公共服务</option>
+                                                        <option value=3>代理商</option>
+                                                        <option value=4>电销</option>
+                                                        <option value=5>财务</option>
+                                                        <option value=6>车主服务</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="case_name" class="col-sm-3 text-right control-label col-form-label">用例名称</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text" class="form-control" id="case_name" placeholder="请填写case名">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="description" class="col-sm-3 text-right control-label col-form-label">用例描述</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text" class="form-control" id="description" placeholder="请填写用例描述">
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label for="run_url" class="col-sm-3 text-right control-label col-form-label">用例地址</label>
+                                                <div class="col-sm-9">
+                                                    <input type="text" class="form-control" id="run_url" placeholder="请填写用例地址（python工程中接口地址）">
+                                                </div>
+                                            </div>
+
+                                        </div>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                                        <a class="btn btn-primary" id="modalButton">删除</a>
+                                        <button class="btn btn-primary" id="modalButton" data-dismiss="modal" onclick="addCase()">提交</button>
                                     </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -306,7 +342,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
-                                        <button class="btn btn-primary" id="modalButton3">删除</button>
+                                        <button class="btn btn-primary" id="modalButton3" data-dismiss="modal">删除</button>
                                     </div>
                                 </div>
                             </div>
@@ -470,18 +506,35 @@
 
     }
 
+    //新增case
+    function addCase() {
+        var systemType = $("#system_type").val();
+        var caseName = $("#case_name").val();
+        var descrption = $("#description").val();
+        var runUrl = $("#run_url").val();
+        $.ajax({
+            type: "POST",
+            url: "/testcase/add",
+            data: {"systemType":systemType,"caseName":caseName,"descption":descrption,"runUrl":runUrl},
+            dataType: "json",
+            success: function(result) {
+                caseTable(1);
+            }
+        });
+
+    }
     //删除case
     function deleteCase() {
 
-        var caseId =  $("#modalButton4").attr("data-caseId")
+        var caseId = $("#modalButton4").attr("data-caseId")
 
         $.ajax({
             type: "GET",
             url: "/testcase/deleteById",
-            data: "pn="+caseId,
+            data: "caseId="+caseId,
             dataType: "json",
             success: function(result) {
-
+                caseTable(1);
             }
         });
     }
