--- a/src/main/resources/templates/html/caseAdmin.html
+++ b/src/main/resources/templates/html/caseAdmin.html
@@ -457,7 +457,7 @@
             var td15 = $("<td></td>").addClass("text-right");
             var deleteButton = $("<button type=\"button\" class=\"btn btn-primary\" data-toggle=\"modal\" data-target=\"#Modal4\" >Delete</button>");
             deleteButton.attr("data-caseId",item.id);
-            deleteButton.attr("onclick",deleteId(deleteButton.attr("id")));
+            // deleteButton.attr("onclick",deleteId(deleteButton.attr("id")));
             td14.append(updateButton);
             td15.append(deleteButton);
             tr1.append(td11);
